<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66ddccbb"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ccbbaa"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/selfInfoTitle"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">
                <!-- 高考分数 -->
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/score" />

                <EditText
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:hint="@string/inputScore"
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">
                <!-- 高考排名 -->
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/rank" />

                <EditText
                    android:id="@+id/rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:hint="@string/rank"
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="14sp" />
            </LinearLayout>

            <TableRow android:layout_marginBottom="10dp">
                <!-- 生源地 -->
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sourceArea" />

                <Spinner
                    android:id="@+id/sourceAreaSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border" />
            </TableRow>

            <TableRow android:layout_marginBottom="10dp">
                <!-- 批次 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batch" />

                <Spinner
                    android:id="@+id/batchSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border" />
            </TableRow>

            <TableRow android:layout_marginBottom="10dp">
                <!-- 类别 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border" />
            </TableRow>

            <TableRow android:layout_marginBottom="10dp">
                <!-- 意向省市 -->
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/targetArea" />

                <Spinner
                    android:id="@+id/targetAreaSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>