<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66ddccbb"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ccbbaa"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/consult"
        android:textColor="#000000"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/keyword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bg"
            android:textColor="#000000"
            android:hint="@string/keywordHint" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/title_btn"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="5dp"
            android:text="@string/search" />
    </LinearLayout>

    <ListView
        android:id="@+id/questionList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="#00ffffff"
        android:dividerHeight="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_bg"
            android:textColor="#000000"
            android:hint="@string/inputHint" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/title_btn"
            android:gravity="center"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="5dp"

            android:text="@string/submitQuestion" />
    </LinearLayout>

</LinearLayout>