<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66ddccbb"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ccbbaa"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/controlLineTitle"
        android:textColor="#000000"
        android:textSize="20sp"  />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:text="@string/year" />

                <Spinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="45dp"
                    android:layout_height="30dp"
                    android:background="@drawable/border"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sourceArea"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/areaSpinner"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:background="@drawable/border" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batch"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/batchSpinner"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:background="@drawable/border" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:background="@drawable/border" />

            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/controlLineTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ccbbaa"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/resultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/category"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/batch"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/controlLine"
            android:textColor="#000000"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <ListView
        android:id="@+id/controlLineList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>